# serial

./: Makefile.in  README.md  config.h.in  configure  configure.ac
include/servicesync/: moat.h  sseconfig.h
include/servicesync/moat/: moatapi.h  moatapp.h  moatplugin.h  moatvalue.h
include/servicesync/sse/: ssebase.h  sselist.h  ssequeue.h  sseslist.h  sseutils.h
src/: Makefile.am  Makefile.in  app_debug.h  main.c  sensor_reader.c  sensor_reader.h  stub_moatapp.c
